# cenph

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  fly.toml  package.json  pnpm-lock.yaml  start_with_migrations.sh  tsconfig.json
app/: root.tsx  tailwind.css
app/components/: add-customer-dialog.tsx  add-prescription-dialog.tsx
app/routes/: __.tsx  index.tsx
app/routes/__/: home.tsx
app/routes/__/customers/: $id.tsx  index.tsx  new.tsx
app/routes/__/customers/$id/: index.tsx  prescription.tsx
app/routes/__/prescriptions/: $id.tsx  expiring.ts  index.tsx  new.tsx
app/routes/__/settings/: db-backup.ts  disk.tsx  index.tsx  password.tsx
app/utils/: session.server.ts  upload-hooks.ts  upload.server.ts
cenph-reminder/: .dockerignore  .env.example  .gitignore  Cargo.toml  README.md
cenph-reminder/src/: main.js  main.rs
prisma/: schema.prisma  seed.mjs  seed.ts
prisma/migrations/20230323021533_/: migration.sql
prisma/migrations/20230331194438_remove_prescription_items/: migration.sql
prisma/migrations/20230331202917_add_prescription_indexes/: migration.sql
prisma/migrations/20230331220901_/: migration.sql
prisma/migrations/20230406010104_add_prescription_file/: migration.sql
prisma/migrations/20230414113913_add_prescription_notified/: migration.sql
