[package]
name = "cenph-reminder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14.25", features = ["http2", "client"] }
tokio = { version = "1.27.0", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4.24", features = ["serde"] }
teloxide = { version = "0.12.2", features = ["macros"] }
futures = "0.3.28"
hyper-tls = "0.5.0"
